--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center; background: green">
-  <h1 style="color: whitesmoke">
-    Welcome to {{ title }}!
-  </h1>
-  <img width="300" alt="Angular Logo" src="https://www.poltex.eu/images/logo.png">
+<app-navbar></app-navbar>
+<div class="wrapper">
+<div class="wrapper" id="sidebar">
+<app-chatlist></app-chatlist>
 </div>
-<h2>Polchatex is new, very innovative and especially <b>Polish</b> chat application which uses only <b>Polish</b> servers. </h2>
+</div>
