added the input for and the main chat component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,12 @@
 <div class="wrapper" id="sidebar">
 <app-chatlist></app-chatlist>
 </div>
+  <div class="wrapper" id="main">
+    <div class="wrapper" id="chat-history">
+    <app-chat></app-chat>
+    </div>
+    <div class="wrapper" id="input">
+      <app-input></app-input>
+    </div>
+  </div>
 </div>
