chat view html/css v1.0

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,101 +1,8 @@
 <h5>Marek Baraniecki</h5>
 <div class="pre-scrollable">
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
-  <div class="card received-message">
-    <div class="message-body" >This is some text within a card body.</div>
-  </div>
-  <div class="card sent-message">
-    <div class="message-body">
-      This is some text within a card body.
-    </div>
-  </div>
+  <p *ngFor="let message of messages" class="{{message.class}}">
+  {{message.content}}
+</p>
   <hr>
     </div>
 
