--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -6,40 +6,42 @@ h5 {
 #top-hr {
   max-height: 1px;
 }
+hr {
+  visibility: hidden;
+}
 div {
   background: #f8f9fa;
 }
-.card {
-  background-color: #ffedda;
-  border-color: #ffedda;
-  max-height: 50px;
-}
-.card-body {
-  background-color: #ffedda;
-  text-align: right;
-  font-size: 1.6vh;
-}
-
 .pre-scrollable {
   max-height: 82vh;
 }
 
 .sent-message {
-  margin-top: 2vh;
-  margin-left: 80vh;
-  margin-right: 10vh;
+  margin-top: 1vh;
+  display: inline-block;
+  float: right;
+  position: relative;
+  margin-left: 40vw;
+  margin-right: 2vw;
+  background-color: #25d1cd;
+  color: #ffffff;
+  text-align: right;
 }
 
 .received-message {
+  display: inline-block;
   margin-bottom: 2vh;
-  margin-left: 10vh;
-  margin-right: 90vh;
+  margin-left: 2vw;
+  margin-right: 40vw;
+  background-color: #e8e8e8;
+  color: #000;
 }
 
-.message-body {
-  background-color: #ffedda;
+p {
   padding-left: 0.5em;
   padding-right: 0.5em;
   padding-bottom: 0.2em;
   padding-top: 0.1em;
+  position: relative;
+  border-radius: 0.4em;
 }
