--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -2,6 +2,7 @@ h5 {
   text-align: center;
   background-color: #f8f9fa;
   margin-bottom: 0;
+  padding-bottom: 1vh;
 }
 #top-hr {
   max-height: 1px;
@@ -23,7 +24,7 @@ div {
   position: relative;
   margin-left: 40vw;
   margin-right: 2vw;
-  background-color: #25d1cd;
+  background-color: peachpuff;
   color: #ffffff;
   text-align: right;
 }
@@ -33,7 +34,7 @@ div {
   margin-bottom: 2vh;
   margin-left: 2vw;
   margin-right: 40vw;
-  background-color: #e8e8e8;
+  background-color: #eaeaea;
   color: #000;
 }
 
