--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,5 +1,7 @@
 <h5>Marek Baraniecki</h5>
 <div class="pre-scrollable">
+  <p class="received-message hidden-message"></p>
+  <p class="sent-message hidden-message"></p>
   <p *ngFor="let message of messages" class="{{message.class}}">
   {{message.content}}
 </p>
