--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,1 @@
-<app-navbar></app-navbar>
-<div class="wrapper">
-<div class="wrapper" id="sidebar">
-<app-chatlist></app-chatlist>
-</div>
-  <div class="wrapper" id="main">
-    <div class="wrapper" id="chat-history">
-    <app-chat></app-chat>
-    </div>
-    <div class="wrapper" id="input">
-      <app-input></app-input>
-    </div>
-  </div>
-</div>
+<router-outlet>
