--- a/src/app/component/login-view/login-view.component.css
+++ b/src/app/component/login-view/login-view.component.css
@@ -9,20 +9,12 @@ body {
   background-color: #f5f5f5;
 }
 
-h1 {
-  text-align: center;
-  padding-top: 1em;
-  font-size: 6.5em;
-  margin-bottom: -2em;
-  letter-spacing: 0.45em;
-}
-
 .form-signin {
   width: 100%;
   max-width: 330px;
   padding: 15px;
   margin: auto;
-  margin-top: 6%;
+  margin-top: 10%;
 }
 .form-signin .checkbox {
   font-weight: 400;
@@ -43,59 +35,7 @@ h1 {
   border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}
-.text-muted {
-  padding-top: 4em;
-}
-#remember {
-  margin-top: -1em;
-  text-align: left;
-}
-.form-group .form-check {
-  align-content: left;
-  padding-right: 20em!important;
-  padding-bottom: 10em;
-}
-.form-check-label {
-  padding-right: 8em;
-  margin-left: -1em;
-}
-.form-check-input {
-  margin-left: -3em;
-}
-/* overriding the default color */
-
-#exampleCheck1:active, #exampleCheck1:focus, #exampleCheck1:hover {
-  color: lightseagreen !important;
-}
-.checkbox:hover {
-  color: red !important;;
-}
-.btn {
-  margin-top: 4em;
-  background-color: lightseagreen;
-  border-color: white;
-}
-.btn:active {
-  background-color: #20d2ca !important;
-  border-color: white !important;
-}
-
-.btn:focus, .btn:active {
-  border-color: white !important;
-}
-
-.btn:focus, .btn:active {
-  outline: none !important;
-  box-shadow: none !important;
-}
-
-.form-control:focus, .form-control:active {
-  outline: none !important;
-  box-shadow: none !important;
-  border-color: lightseagreen !important;
 }
