--- a/src/app/component/login-view/login-view.component.html
+++ b/src/app/component/login-view/login-view.component.html
@@ -1,13 +1,14 @@
 <div class="text-center">
-  <h1 class="h2 mb-4 font-weight-bold">POLCHATEX</h1>
   <form class="form-signin">
+    <h1 class="h2 mb-4 font-weight-bold">P O L C H A T E X</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input [(ngModel)]="username" name="username" type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
     <input [(ngModel)]="password" name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Remember me</label>
+    <div class="checkbox mb-3">
+      <!--<label>
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>-->
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="login(username, password)">Sign in</button>
     <p class="mt-5 mb-3 text-muted"><a href="http://github.com/developol">&copy; Developol 2018</a></p>
