--- a/src/app/component/chat-view/navbar/navbar.component.html
+++ b/src/app/component/chat-view/navbar/navbar.component.html
@@ -7,10 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li><form class="form-inline my-2 my-lg-0">
-        <input #loginMock class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Start a new chat</button>
       </form></li>
     </ul>
-    <a class="nav-link" href="#">Settings</a>
+    <a class="nav-link" (click)="onLogoutClicked()" [routerLink]="''">Logout</a>
   </div>
 </nav>
