* added MessageItem type and MessageType enum * added onClick event setting active chat * after this event chat history is loaded from server TODO - set username on sessionStorage to differ sent and received messages

--- a/src/app/component/chat-view/chat/chat.component.html
+++ b/src/app/component/chat-view/chat/chat.component.html
@@ -2,7 +2,7 @@
 <div class="pre-scrollable">
   <p class="received-message hidden-message"></p>
   <p class="sent-message hidden-message"></p>
-  <p *ngFor="let message of messages" class="{{message.class}}">
+  <p *ngFor="let message of currentMessages" class="{{message.class}}">
   {{message.content}}
 </p>
   <hr>
