--- a/src/app/component/chat-view/chatlist/chatlist.component.html
+++ b/src/app/component/chat-view/chatlist/chatlist.component.html
@@ -1,6 +1,6 @@
 <nav id="sidebar">
   <div class="list-group pre-scrollable">
-    <div *ngFor="let chat of chatList" (click)="test()" class="list-group-item list-group-item-action flex-column align-items-start">
+    <div *ngFor="let chat of chatList" (click)="onChatClicked(chat)" class="list-group-item list-group-item-action flex-column align-items-start">
         <h5 >{{chat.chatName}}</h5>
         <small *ngIf="chat.lastMessage" class="text-muted">{{chat.lastMessage.createDateTime}}</small>
       <p *ngIf="chat.lastMessage && chat.usernames.length > 2" class="mb-1">{{chat.lastMessage.senderID}}: </p>
