--- a/src/app/component/chat-view/input/input.component.html
+++ b/src/app/component/chat-view/input/input.component.html
@@ -1,5 +1,5 @@
 <div class="input-group mb-3 the-input">
-  <input type="text" [(ngModel)]="message" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+  <input type="text" [(ngModel)]="message" class="form-control" placeholder="Write a message..." aria-label="Recipient's username" aria-describedby="button-addon2">
   <div class="input-group-append">
     <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="onSendButtonClicked()">Send</button>
   </div>
