--- a/src/app/component/registration-view/registration-view.component.css
+++ b/src/app/component/registration-view/registration-view.component.css
@@ -8,10 +8,7 @@ body {
   padding-bottom: 40px;
   background-color: #f5f5f5;
 }
-a {
-  color: deepskyblue;
-  font-size: 1em;
-}
+
 h1 {
   text-align: center;
   padding-top: 1em;
@@ -19,13 +16,16 @@ h1 {
   margin-bottom: -2em;
   letter-spacing: 0.45em;
 }
-
+small {
+  margin-top: -3em;
+  font-size: 0.7em;
+}
 .form-signin {
   width: 100%;
   max-width: 330px;
   padding: 15px;
   margin: auto;
-  margin-top: 6%;
+  margin-top: 1%;
 }
 .form-signin .checkbox {
   font-weight: 400;
@@ -41,23 +41,24 @@ h1 {
   z-index: 2;
 }
 .form-signin input[type="email"] {
+  margin-top: 1em;
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
+#inputEmail {
+  margin-top: 2em;
+}
 .form-signin input[type="password"] {
-  margin-top: 1em;
+  margin-top: 2em;
   margin-bottom: 1em;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 .text-muted {
-  padding-top: 4em;
+  padding-top: 3em;
 }
-#remember {
-  margin-top: -1em;
-  text-align: left;
-}
+
 .form-group .form-check {
   align-content: left;
   padding-right: 20em!important;
@@ -79,10 +80,9 @@ h1 {
   color: red !important;;
 }
 .btn {
-  margin-top: 4em;
+  margin-top: 2em;
   background-color: lightseagreen;
   border-color: white;
-  margin-bottom: 1em;
 }
 .btn:active {
   background-color: #20d2ca !important;
@@ -102,4 +102,11 @@ h1 {
   outline: none !important;
   box-shadow: none !important;
   border-color: lightseagreen !important;
+}
+
+.alert {
+  margin-left: 29vw;
+  min-width: 40vw;
+  max-width: 40vw;
+  margin-bottom: -5vh;
 }
