--- a/src/app/component/chat-view/navbar/navbar.component.html
+++ b/src/app/component/chat-view/navbar/navbar.component.html
@@ -7,8 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li><form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Start a new chat</button>
+        <input class="form-control mr-sm-2" [(ngModel)]="searchedUser" name="searchedUser" type="search"
+               placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" (click)="onStartNewChatClicked()"
+                type="submit">Start a new chat</button>
       </form></li>
     </ul>
     <a class="nav-link" (click)="onLogoutClicked()" [routerLink]="''">Logout</a>
