--- a/src/app/component/login-view/login-view.component.html
+++ b/src/app/component/login-view/login-view.component.html
@@ -9,7 +9,7 @@
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Remember me</label>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="login(username, password)">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="login()">Sign in</button>
     <a id="signup" href="/register">Don't have an account? <b>Sing up</b></a>
     <p class="mt-5 mb-3 text-muted"><a href="http://github.com/developol">&copy; Developol 2018</a></p>
   </form>
